# agent-duel

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  package-lock.json  package.json  tsconfig.json
.agents/skills/arena-ui-system/: SKILL.md
.agents/skills/motion-polish/: SKILL.md
.agents/skills/playwright-visual-qa/: SKILL.md
anchor/: Anchor.toml
anchor/migrations/: deploy.ts
onchain/: Anchor.toml  Cargo.toml  README.md
onchain/clients/: README.md
onchain/clients/arena/: build-record-battle-proof-instruction.ts  constants.ts  decode-battle-proof-anchor.ts  derive-battle-proof-pda.ts  encode-record-battle-proof.ts  index.ts  types.ts
onchain/programs/arena/: Cargo.toml  README.md
onchain/programs/arena/src/: lib.rs
onchain/programs/arena/src/errors/: mod.rs
onchain/programs/arena/src/instructions/: mod.rs
onchain/programs/arena/src/instructions/record_battle_proof/: accounts.rs  data.rs  mod.rs  processor.rs
onchain/programs/arena/src/state/: battle_proof_anchor.rs  mod.rs
onchain/programs/arena/src/utils/: bytes.rs
onchain/prompts/: arena-ui-gemini.md
onchain/scripts/: README.md
onchain/tests/: README.md  arena.ts
prisma/: init.sql  schema.prisma  seed.ts
scripts/: create-demo-round.ts  run-demo-round.ts  settle-demo-round.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/: page.tsx
src/app/battles/: page.tsx
src/app/events/: page.tsx
src/app/round/: page.tsx
src/components/: action-timeline.tsx  agent-card.tsx  bankroll-panel.tsx  event-card.tsx  index.ts  round-shell.tsx  settlement-result.tsx
(+107 files in other folders)
