[package]
name = "arena"
version = "0.1.0"
description = "AgentDuel arena battle proof anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena"

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi"] }
pinocchio-system = "0.5.0"
solana-address = { version = "2.2.0", features = ["curve25519"] }
solana-define-syscall = { version = "4.0.1", features = ["unstable-static-syscalls"] }
solana-define-syscall-v5 = { package = "solana-define-syscall", version = "5.0.0", features = ["unstable-static-syscalls"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
